update to 1.49.3